--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
     <button mat-button routerLink="/Page-A">Page-A</button>
     <button mat-button routerLink="/Page-B">Page-B</button>
     <button mat-button routerLink="/Page-C">Page-C</button>
+    <button mat-button routerLink="/AdventureWorks"><mat-icon>storage</mat-icon></button>
     <button mat-button routerLink="/products">Products</button>
   </div>
   <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
@@ -26,6 +27,7 @@
   <button mat-menu-item routerLink="/Page-A">Page-A</button>
   <button mat-menu-item routerLink="/Page-B">Page-B</button>
   <button mat-menu-item routerLink="/Page-C">Page-C</button>
+  <button mat-menu-item routerLink="/AdventureWorks"><mat-icon>storage</mat-icon> AdventureWorks</button>
   <button mat-menu-item routerLink="/products">Products</button>
 </mat-menu>
 
