--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import "~@angular/material/prebuilt-themes/purple-green.css";
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 
 body {
   font-family: Bliss Pro Medium, Lucida Sans Unicode, sans-serif;
