--- a/src/app/aw-table/aw-table.component.html
+++ b/src/app/aw-table/aw-table.component.html
@@ -1,1 +1,28 @@
 <p>Table [{{table_name}}]</p>
+
+  <kendo-grid
+      [data]="view | async"
+      [height]="533"
+      [pageSize]="gridState.take" [skip]="gridState.skip" [sort]="gridState.sort"
+      [pageable]="true" [sortable]="true"
+      (dataStateChange)="onStateChange($event)"
+      (edit)="editHandler($event)" (cancel)="cancelHandler($event)"
+      (save)="saveHandler($event)" (remove)="removeHandler($event)"
+      (add)="addHandler($event)"
+      [navigable]="true"
+    >
+    <ng-template kendoGridToolbarTemplate>
+        <button kendoGridAddCommand>Add new</button>
+    </ng-template>
+    <kendo-grid-column field="EmailAddressID" editor="numeric" title="EmailAddressID"></kendo-grid-column>
+    <kendo-grid-column field="EmailAddress" title="EmailAddress"></kendo-grid-column>
+    <kendo-grid-column field="ModifiedDate" title="ModifiedDate"></kendo-grid-column>
+    <kendo-grid-command-column title="command" width="220">
+        <ng-template kendoGridCellTemplate let-isNew="isNew">
+            <button kendoGridEditCommand [primary]="true">Edit</button>
+            <button kendoGridRemoveCommand>Remove</button>
+            <button kendoGridSaveCommand [disabled]="formGroup?.invalid">{{ isNew ? 'Add' : 'Update' }}</button>
+            <button kendoGridCancelCommand>{{ isNew ? 'Discard changes' : 'Cancel' }}</button>
+        </ng-template>
+    </kendo-grid-command-column>
+  </kendo-grid>
