--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,8 @@
     <button mat-button routerLink="/Page-C">Page-C</button>
     <button mat-button routerLink="/AdventureWorks"><mat-icon>storage</mat-icon></button>
     <button mat-button routerLink="/products">Products</button>
+    <button mat-button *ngIf="!isAuthenticated" (click)="login()"> Login </button>
+    <button mat-button *ngIf="isAuthenticated" (click)="logout()"> Logout </button>
   </div>
   <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
     <mat-icon>menu</mat-icon>
@@ -31,6 +33,8 @@
   <button mat-menu-item routerLink="/Page-C">Page-C</button>
   <button mat-menu-item routerLink="/AdventureWorks"><mat-icon>storage</mat-icon> AdventureWorks</button>
   <button mat-menu-item routerLink="/products">Products</button>
+  <button mat-menu-item *ngIf="!isAuthenticated" (click)="login()"> Login </button>
+  <button mat-menu-item *ngIf="isAuthenticated" (click)="logout()"> Logout </button>
 </mat-menu>
 
 <router-outlet></router-outlet>
